--- a/package.json
+++ b/package.json
@@ -4,9 +4,10 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test:all": "NODE_ICU_DATA=node_modules/full-icu jest",
-    "test:specific": "NODE_ICU_DATA=node_modules/full-icu jest --findRelatedTests",
-    "start": "static-server"
+    "test:all": "jest",
+    "test:jest": "jest --findRelatedTests module-4/**/*.spec.js",
+    "serve": "static-server",
+    "start": "static-server --port 8080 ./module-4/sortable-table"
   },
   "repository": {
     "type": "git",
@@ -25,7 +26,6 @@
     "@babel/preset-env": "^7.9.0",
     "@testing-library/jest-dom": "^5.3.0",
     "babel-jest": "^25.2.4",
-    "full-icu": "^1.3.1",
     "jest": "^25.2.4",
     "static-server": "^2.2.1"
   }
