--- a/package.json
+++ b/package.json
@@ -29,4 +29,36 @@
     "jest": "^25.2.4",
     "static-server": "^2.2.1"
   }
+}{
+  "name": "js-20200324",
+  "version": "1.0.0",
+  "description": "",
+  "main": "index.js",
+  "scripts": {
+    "test:all": "cross-env NODE_ICU_DATA=node_modules/full-icu jest",
+    "test:specific": "cross-env NODE_ICU_DATA=node_modules/full-icu jest --findRelatedTests",
+    "start": "static-server"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/dosandk/js-20200324.git"
+  },
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/dosandk/js-20200324/issues"
+  },
+  "homepage": "https://github.com/dosandk/js-20200324#readme",
+  "devDependencies": {
+    "@babel/core": "^7.9.0",
+    "@babel/plugin-proposal-class-properties": "^7.8.3",
+    "@babel/plugin-syntax-dynamic-import": "^7.8.3",
+    "@babel/preset-env": "^7.9.0",
+    "@testing-library/jest-dom": "^5.3.0",
+    "babel-jest": "^25.2.4",
+    "cross-env": "^7.0.2",
+    "full-icu": "^1.3.1",
+    "jest": "^25.2.4",
+    "static-server": "^2.2.1"
+  }
 }
