--- a/package.json
+++ b/package.json
@@ -5,8 +5,9 @@
   "main": "index.js",
   "scripts": {
     "test:all": "cross-env NODE_ICU_DATA=node_modules/full-icu jest",
-    "test:specific": "cross-env NODE_ICU_DATA=node_modules/full-icu jest --findRelatedTests",
-    "start": "static-server"
+    "test:specific": "cross-env NODE_ICU_DATA=node_modules/full-icu jest --findRelatedTests",    
+    "serve": "static-server",
+    "start": "static-server --port 8080 ./module-5/tooltip"
   },
   "repository": {
     "type": "git",
