--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test:all": "cross-env NODE_ICU_DATA=node_modules/full-icu jest",
     "test:specific": "cross-env NODE_ICU_DATA=node_modules/full-icu jest --findRelatedTests",    
     "serve": "static-server",
-    "start": "static-server --port 8080 ./module-5/tooltip"
+    "start": "static-server --port 8080 ./module-5/notification-manager"
   },
   "repository": {
     "type": "git",
