--- a/package.json
+++ b/package.json
@@ -5,9 +5,9 @@
   "main": "index.js",
   "scripts": {
     "test:all": "cross-env NODE_ICU_DATA=node_modules/full-icu jest",
-    "test:specific": "cross-env NODE_ICU_DATA=node_modules/full-icu jest --findRelatedTests",    
-    "serve": "static-server",
-    "start": "static-server --port 8080 ./module-7/tasks/sortable-table" 
+    "test:specific": "cross-env NODE_ICU_DATA=node_modules/full-icu jest --findRelatedTests",
+    "test:karma": "karma start karma.conf.js",
+    "start": "static-server"
   },
   "repository": {
     "type": "git",
@@ -28,8 +28,15 @@
     "babel-jest": "^25.2.4",
     "cross-env": "^7.0.2",
     "full-icu": "^1.3.1",
+    "jasmine": "^3.5.0",
+    "jasmine-core": "^3.5.0",
     "jest": "^25.2.4",
     "jest-fetch-mock": "^3.0.3",
+    "karma": "^5.0.2",
+    "karma-chrome-launcher": "^3.1.0",
+    "karma-firefox-launcher": "^1.3.0",
+    "karma-jasmine": "^3.1.1",
+    "karma-json-reporter": "^1.2.1",
     "static-server": "^2.2.1"
   }
 }
