--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "test:all": "cross-env NODE_ICU_DATA=node_modules/full-icu jest",
     "test:specific": "cross-env NODE_ICU_DATA=node_modules/full-icu jest --findRelatedTests",
     "test:karma": "karma start karma.conf.js",
-    "start": "static-server"
+    "serve": "static-server",
+    "start": "static-server --port 8080 ./module-8/tasks/product-form/" 
   },
   "repository": {
     "type": "git",
